AC_PREREQ([2,68])
AC_INIT([exposive],[0.0],[illusion.of.life92@gmail.com])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE
AC_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_RANLIB
AC_CONFIG_FILES([Makefile
                                        src/Makefile
                                        doc/Makefile
                                        contrib/Makefile
                                        check/Makefile])
AC_OUTPUT




